make scripts work for npm packages

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "desktop/main.js",
   "homepage": "https://universaldatatool.com",
   "scripts": {
-    "postinstall": "electron-builder install-app-deps",
     "start": "cross-env PORT=6001 react-scripts start",
-    "build": "npm run build:babel && npm run build:vanilla && npm run build:desktop",
+    "build": "npm run build:web",
+    "build:all": "npm run build:babel && npm run build:vanilla && npm run build:desktop",
     "build:lib": "npm run build:babel && npm run build:vanilla",
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib && cp ./package.json ./lib/package.json && node ./lib/lib/fix-deps.js",
     "build:vanilla": "parcel build -d ./lib -o vanilla.js ./src/vanilla/index.js",
@@ -16,9 +16,10 @@
     "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
     "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'npm run start' 'electron ./desktop'",
     "start:desktop:build": "electron ./desktop",
+    "postinstall:desktop": "electron-builder install-app-deps",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && cross-env EP_RELEASE=true electron-builder --linux --publish always",
-    "release": "npm run release:desktop && npm run release:lib",
+    "release:all": "npm run release:desktop && npm run release:lib",
     "test": "ava **/*.test.js",
     "storybook": "start-storybook -p 6002 -s public",
     "build-storybook": "build-storybook -s public",
