--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "detect-browser": "^5.0.0",
     "download-file": "^0.1.5",
     "duration": "^0.2.2",
+    "electron-updater": "^4.3.1",
     "fast-json-patch": "^3.0.0-1",
     "ffmpeg-static": "^4.2.4",
     "form-data": "^3.0.0",
@@ -140,6 +141,8 @@
     ],
     "publish": {
       "provider": "github",
+      "repo": "universal-data-tool",
+      "owner": "universaldatool",
       "releaseType": "release"
     }
   },
