--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gh-pages": "npm run build:web && npm run build:vanilla && cp lib/vanilla.js build/vanilla.js && cp ./CNAME ./build/CNAME && gh-pages -d build",
     "prettier": "prettier --write \"src/**/*.js\"",
     "test:prettier": "prettier --check \"src/**/*.js\"",
-    "test:lint": "npx eslint src",
+    "test:lint": "eslint src --strict",
     "test:integration:dev": "./node_modules/cypress/bin/cypress open",
     "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false"
   },
