--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "@material-ui/styles": "^4.9.0",
+    "@material-ui/utils": "^4.10.2",
     "@semantic-release/git": "^9.0.0",
     "@sentry/browser": "^5.15.4",
     "any-shell-escape": "^0.1.1",
@@ -104,6 +105,7 @@
     "react-hotkeys": "^2.0.0",
     "react-icons": "^3.9.0",
     "react-image-annotate": "^1.2.7",
+    "react-material-workspace-layout": "^0.1.6",
     "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
     "rfc6902": "^3.0.4",
