s3 iam file import initial working implementation

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "any-shell-escape": "^0.1.1",
     "aws-amplify": "^3.0.6",
     "aws-sign": "^1.0.0",
+    "aws4fetch": "^1.0.12",
     "axios": "^0.19.2",
     "bent": "^7.1.0",
     "brace": "^0.11.1",
@@ -90,6 +91,7 @@
     "download-file": "^0.1.5",
     "duration": "^0.2.2",
     "fast-json-patch": "^3.0.0-1",
+    "fast-xml-parser": "^3.17.4",
     "ffmpeg-static": "^4.2.4",
     "form-data": "^3.0.0",
     "i18next": "^19.4.4",
