--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    if: "contains(github.event.head_commit.message, 'chore(release)')"
+    if: "contains(github.event.head_commit.message, 'chore(release)') || contains(github.head_ref, 'buildtest/')"
     runs-on: ${{ matrix.os }}
 
     strategy:
