--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-material-workspace-layout": "^1.0.1",
     "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
+    "recoil": "^0.0.13",
     "rfc6902": "^3.0.4",
     "seamless-immutable": "^7.1.4",
     "seed-random": "^2.2.0",
