add on-premise functionality and env var app config options

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "proxy": "http://localhost:3000",
   "scripts": {
     "start": "cross-env PORT=6001 react-scripts start",
+    "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'npm run start' 'electron ./desktop'",
+    "start:desktop:static": "electron ./desktop",
+    "start:web:static": "concurrently 'node ./add-preloaded-app-config.js && serve -s build -p 3000' 'udt-collaboration-server --port 3001'",
     "build": "npm run build:web",
     "build:all": "npm run build:babel && npm run build:vanilla && npm run build:desktop",
     "build:lib": "npm run build:babel && npm run build:vanilla",
@@ -15,8 +18,6 @@
     "build:vanilla:dev": "parcel ./src/vanilla/index.js",
     "build:web": "rimraf build && react-scripts build && cp -r build ./build-copy && mv build-copy build/app",
     "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
-    "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'npm run start' 'electron ./desktop'",
-    "start:desktop:build": "electron ./desktop",
     "postinstall:desktop": "electron-builder install-app-deps",
     "release:lib": "npm run build && cd lib && npm publish",
     "release:desktop": "npm run build:desktop && cross-env EP_RELEASE=true electron-builder --linux --publish always",
@@ -122,7 +123,9 @@
     "seamless-immutable-patch": "^1.0.4",
     "seed-random": "^2.2.0",
     "seedrandom": "^3.0.5",
+    "serve": "^11.3.2",
     "styled-components": "^5.0.0",
+    "udt-collaboration-server": "^1.0.7",
     "udt-dataset-managers": "^1.0.9",
     "udt-format": "0.0.1",
     "use-event-callback": "^0.1.0",
