--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-data-tool",
-  "version": "0.14.4",
+  "version": "0.14.9",
   "license": "MIT",
   "main": "desktop/main.js",
   "homepage": "https://universaldatatool.com/app/",
@@ -75,7 +75,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.1.0",
-    "react-nlp-annotate": "^1.0.0",
+    "react-nlp-annotate": "^1.0.1",
     "rimraf": "^3.0.2",
     "spelling": "^2.0.1"
   },
@@ -117,7 +117,7 @@
     "react-material-workspace-layout": "^1.0.1",
     "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
-    "react-time-series": "^1.0.3",
+    "react-time-series": "^1.0.19",
     "recoil": "^0.0.13",
     "rfc6902": "^3.0.4",
     "seamless-immutable": "^7.1.4",
@@ -129,6 +129,7 @@
     "udt-collaboration-server": "^1.0.7",
     "udt-dataset-managers": "^1.0.12",
     "udt-format": "0.0.1",
+    "use-async-effect": "^2.2.2",
     "use-event-callback": "^0.1.0",
     "wavesurfer.js": "^3.3.3",
     "ytdl-core": "^2.0.1"
