--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test:prettier": "prettier --check \"src/**/*.js\"",
     "test:lint": "eslint src --max-warnings=0",
     "test:integration:dev": "./node_modules/cypress/bin/cypress open",
-    "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false"
+    "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false",
+    "test:react-lib": "react-install-render ./lib --props '{}'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -74,6 +75,7 @@
     "prettier": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-install-render": "^1.0.9",
     "react-markdown": "^4.1.0",
     "react-nlp-annotate": "^1.0.1",
     "rimraf": "^3.0.2",
@@ -113,7 +115,7 @@
     "react-hotkeys": "^2.0.0",
     "react-i18next": "^11.4.0",
     "react-icons": "^3.9.0",
-    "react-image-annotate": "^1.7.0",
+    "react-image-annotate": "^1.7.6",
     "react-material-workspace-layout": "^1.0.1",
     "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
