--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "in-browser-download": "^2.0.0",
     "jac-format": "^1.1.3",
     "js-md5": "^0.7.3",
+    "mime-types": "^2.1.27",
     "moment": "^2.24.0",
     "nan": "^2.14.1",
     "posthog-js": "^1.0.4",
