--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test:prettier": "prettier --check \"src/**/*.js\"",
     "test:lint": "eslint src --max-warnings=0",
     "test:integration:dev": "./node_modules/cypress/bin/cypress open",
-    "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false"
+    "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false",
+    "test:devBrowser": "yarn run cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
