--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'npm run start' 'electron ./desktop'",
     "start:desktop:static": "electron ./desktop",
     "start:web:static": "concurrently 'node ./add-preloaded-app-config.js && serve -s build -p 3000' 'udt-collaboration-server --port 3001'",
-    "build": "npm run build:web",
+    "build": "yarn run build:web",
     "build:all": "npm run build:babel && npm run build:vanilla && npm run build:desktop",
     "build:lib": "npm run build:babel && npm run build:vanilla",
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib --copy-files && cp ./package.json ./lib/package.json && cp ./README.md ./lib/README.md && node ./lib/lib/fix-deps.js",
@@ -94,6 +94,7 @@
     "brace": "^0.11.1",
     "detect-browser": "^5.0.0",
     "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
     "download-file": "^0.1.5",
     "duration": "^0.2.2",
     "fast-json-patch": "^3.0.0-1",
