--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,5 +34,6 @@ jobs:
           start: npm run start
           wait-on: http://localhost:6001
           record: true
+          config: pageLoadTimeout=120000
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
