--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "udt-collaboration-server": "^1.0.7",
     "udt-dataset-managers": "^1.0.15",
     "udt-format": "0.0.1",
+    "udt-review-hooks": "^1.0.0",
     "use-async-effect": "^2.2.2",
     "use-event-callback": "^0.1.0",
     "wavesurfer.js": "^3.3.3",
