Handle two samples with same url and/or id

--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
     "chroma-js": "^2.0.4",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.0",
-    "cypress": "^4.4.0",
+    "cypress": "4.4.0",
     "cypress-file-upload": "^4.0.6",
     "cypress-image-snapshot": "^3.1.1",
     "electron": "^8.0.0",
     "electron-builder": "^22.8.0",
     "electron-builder-notarize": "^1.2.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "gh-pages": "^2.1.1",
     "material-survey": "^1.0.40",
     "parcel": "^1.12.4",
@@ -120,9 +121,9 @@
     "react-icons": "^3.9.0",
     "react-image-annotate": "^1.7.11",
     "react-material-workspace-layout": "^1.0.9",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "3.4.1",
     "react-select": "^3.0.8",
-    "react-time-series": "^1.0.20",
+    "react-time-series": "^1.0.21",
     "recoil": "^0.0.13",
     "rfc6902": "^3.0.4",
     "seamless-immutable": "^7.1.4",
