--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "chroma-js": "^2.0.4",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.0",
-    "cypress": "4.4.0",
+    "cypress": "^4.4.0",
     "cypress-file-upload": "^4.0.6",
     "cypress-image-snapshot": "^3.1.1",
     "electron": "^8.0.0",
@@ -121,7 +121,7 @@
     "react-icons": "^3.9.0",
     "react-image-annotate": "^1.7.11",
     "react-material-workspace-layout": "^1.0.9",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.0.8",
     "react-time-series": "^1.0.21",
     "recoil": "^0.0.13",
@@ -134,7 +134,7 @@
     "styled-components": "^5.0.0",
     "udt-collaboration-server": "^1.0.7",
     "udt-dataset-managers": "^1.0.15",
-    "udt-format": "0.0.1",
+    "udt-format": "^0.0.1",
     "use-async-effect": "^2.2.2",
     "use-event-callback": "^0.1.0",
     "wavesurfer.js": "^3.3.3",
