fix cypress command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib --copy-files && cp ./package.json ./lib/package.json && cp ./README.md ./lib/README.md && node ./lib/lib/fix-deps.js",
     "build:vanilla": "parcel build -d ./lib -o vanilla.js ./src/vanilla/index.js",
     "build:vanilla:dev": "parcel ./src/vanilla/index.js",
-    "build:watch": "babel --watch src --out-dir dist",
+    "build:watch": "cross-env BABEL_ENV=development NODE_ENV=development babel  --watch src --out-dir dist",
     "build:web": "rimraf build && react-scripts build && cp -r build ./build-copy && mv build-copy build/app",
     "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
     "postinstall:desktop": "electron-builder install-app-deps",
@@ -32,7 +32,7 @@
     "test:lint": "eslint src --max-warnings=0",
     "test:integration:dev": "./node_modules/cypress/bin/cypress open",
     "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false",
-    "test:devBrowser": "concurrently \"dotenv -- yarn run cypress open\" \"yarn run build:watch\""
+    "test:devBrowser": "concurrently \"dotenv -- cross-env BABEL_ENV=development NODE_ENV=development yarn run cypress open\" \"yarn run build:watch\""
   },
   "eslintConfig": {
     "extends": "react-app"
