--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "chroma-js": "^2.0.4",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.0",
-    "cypress": "^4.4.0",
+    "cypress": "^6.3.0",
     "cypress-file-upload": "^4.0.6",
     "cypress-image-snapshot": "^3.1.1",
+    "cypress-xpath": "^1.6.1",
     "electron": "^8.0.0",
     "electron-builder": "^22.8.0",
     "electron-builder-notarize": "^1.2.0",
