--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:lint": "eslint src --max-warnings=0",
     "test:integration:dev": "./node_modules/cypress/bin/cypress open",
     "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false",
-    "test:devBrowser": "concurrently \"dotenv -- yarn run cypress open\" \"yarn run build:watch\""
+    "test:devBrowser": "concurrently \"dotenv -- cross-env BABEL_ENV=development NODE_ENV=development yarn run cypress open\" \"yarn run build:watch\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -64,7 +64,7 @@
     "chroma-js": "^2.0.4",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.0",
-    "cypress": "^4.4.0",
+    "cypress": "^6.3.0",
     "cypress-file-upload": "^4.0.6",
     "cypress-image-snapshot": "^3.1.1",
     "electron": "^8.0.0",
