--- a/.prettierignore
+++ b/.prettierignore
@@ -2,10 +2,13 @@
 build/*
 dist/*
 lib/*
+logs/*
 node_modules/*
 .env
+.env.example
 yarn-error.log
 cypress/snapshots/*
 cypress/videos/*
+cypress/screenshots/*
 cypress/screenshots/*
 yarn.lock
