--- a/package.json
+++ b/package.json
@@ -46,11 +46,16 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ],
+    "test": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.4",
+    "@babel/cli": "^7.12.13",
+    "@babel/core": "^7.12.13",
     "@cypress/react": "^4.16.4",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
@@ -122,6 +127,7 @@
     "react-select": "^3.0.8",
     "react-time-series": "^1.0.20",
     "recoil": "^0.0.13",
+    "regenerator-runtime": "^0.13.7",
     "rfc6902": "^3.0.4",
     "seamless-immutable": "^7.1.4",
     "seamless-immutable-patch": "^1.0.4",
