--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "proxy": "http://localhost:3000",
   "scripts": {
     "start": "cross-env PORT=6001 react-scripts start",
-    "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'npm run start' 'electron ./desktop'",
+    "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'start' 'electron http://http://localhost:6001/app'",
     "start:desktop:static": "electron ./desktop",
     "start:web:static": "concurrently 'node ./add-preloaded-app-config.js && serve -s build -p 3000' 'udt-collaboration-server --port 3001'",
     "build": "npm run build:web",
@@ -29,9 +29,8 @@
     "prettier": "prettier --write .",
     "test:prettier": "prettier --check \"src/**/*.js\"",
     "test:lint": "eslint src --max-warnings=0",
-    "test:integration:dev": "./node_modules/cypress/bin/cypress open",
-    "test:integration": "./node_modules/cypress/bin/cypress run --env failOnSnapshotDiff=false",
-    "test:devBrowser": "dotenv yarn run cypress open"
+    "test:integration:dev": "dotenv cypress open",
+    "test:integration": "dotenv cypress run failOnSnapshotDiff=false"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -66,12 +65,11 @@
     "@testing-library/react-hooks": "^3.2.1",
     "ava": "^3.7.0",
     "chroma-js": "^2.0.4",
-    "concurrently": "^5.2.0",
-    "cross-env": "^7.0.0",
+    "concurrently": "^5.3.0",
     "cypress": "^6.4.0",
     "cypress-file-upload": "^4.0.6",
     "cypress-image-snapshot": "^3.1.1",
-    "electron": "^8.0.0",
+    "electron": "^11.2.3",
     "electron-builder": "^22.8.0",
     "electron-builder-notarize": "^1.2.0",
     "gh-pages": "^2.1.1",
@@ -96,6 +94,7 @@
     "axios": "^0.19.2",
     "bent": "^7.1.0",
     "brace": "^0.11.1",
+    "cross-env": "^7.0.3",
     "detect-browser": "^5.0.0",
     "dotenv-cli": "^4.0.0",
     "download-file": "^0.1.5",
@@ -135,7 +134,7 @@
     "seedrandom": "^3.0.5",
     "serve": "^11.3.2",
     "styled-components": "^5.0.0",
-    "udt-collaboration-server": "^1.0.7",
+    "udt-collaboration-server": "^1.0.8",
     "udt-dataset-managers": "^1.0.15",
     "udt-format": "0.0.1",
     "use-async-effect": "^2.2.2",
