--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:prettier": "prettier --check \"src/**/*.js\"",
     "test:lint": "eslint src --max-warnings=0",
     "test:integration:dev": "dotenv cypress open",
-    "test:integration": "cypress run failOnSnapshotDiff=false "
+    "test:integration": "dotenv cypress run failOnSnapshotDiff=false"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -69,6 +69,7 @@
     "cypress": "^6.4.0",
     "cypress-file-upload": "^4.0.6",
     "cypress-image-snapshot": "^3.1.1",
+    "cypress-terminal-report": "^2.4.0",
     "electron": "^11.2.3",
     "electron-builder": "^22.8.0",
     "electron-builder-notarize": "^1.2.0",
