--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Code Cleanliness
     runs-on: ubuntu-18.04
+    defaults:
+            run:
+                working-directory: universal-data-tools
     steps:
       - name: Checkout
         uses: actions/checkout@v1
