--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Code Cleanliness
     runs-on: ubuntu-18.04
+    defaults:
+      run:
+        working-directory: universal-data-tools
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -13,7 +16,7 @@ jobs:
         with:
           node-version: 12
       - name: Run Prettier Test
-        run: npx prettier --check "src/**/*.js"
+        run: npx prettier --check .
       - name: Run Lint Test
         run: |
           # TODO this takes 1-2 mins to install, run eslint w/o installing
