--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,6 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Code Cleanliness
     runs-on: ubuntu-18.04
-    defaults:
-      run:
-        working-directory: universal-data-tool
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -54,22 +51,22 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          CYPRESS_AWS_IDENTITY_POOL_ID: ${{ secrets.CYPRESS_AWS_IDENTITY_POOL_ID }}
-          CYPRESS_AWS_AUTH_REGION: ${{ secrets.CYPRESS_AWS_AUTH_REGION }}
-          CYPRESS_AWS_USER_POOL_ID: ${{ secrets.CYPRESS_AWS_USER_POOL_ID }}
-          CYPRESS_AWS_USER_POOL_WEB_CLIENT_ID: ${{ secrets.CYPRESS_AWS_USER_POOL_WEB_CLIENT_ID }}
-          CYPRESS_AWS_MANDATORY_SIGN_IN: ${{ secrets.CYPRESS_AWS_MANDATORY_SIGN_IN }}
-          CYPRESS_AWS_AUTHENTICATION_FLOW_TYPE: ${{ secrets.CYPRESS_AWS_AUTHENTICATION_FLOW_TYPE }}
-          CYPRESS_AWS_STORAGE_BUCKET: ${{ secrets.CYPRESS_AWS_STORAGE_BUCKET }}
-          CYPRESS_AWS_STORAGE_REGION: ${{ secrets.CYPRESS_AWS_STORAGE_REGION }}
-          CYPRESS_COGNITO_USER_NAME: ${{ secrets.CYPRESS_COGNITO_USER_NAME }}
-          CYPRESS_COGNITO_USER_PASS: ${{ secrets.CYPRESS_COGNITO_USER_PASS }}
-          CYPRESS_COGNITO_USER_PASS_LENGTH: ${{ secrets.CYPRESS_COGNITO_USER_PASS_LENGTH }}
-          CYPRESS_COGNITO_USER_PASS_REQUIRE_LOWERCASE: ${{ secrets.CYPRESS_COGNITO_USER_PASS_REQUIRE_LOWERCASE }}
-          CYPRESS_COGNITO_USER_PASS_REQUIRE_UPPERCASE: ${{ secrets.CYPRESS_COGNITO_USER_PASS_REQUIRE_UPPERCASE }}
-          CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER: ${{ secrets.CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER }}
-          CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL: ${{ secrets.CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL }}
+          CYPRESS_RECORD_KEY: ${{ env.CYPRESS_RECORD_KEY }}
+          CYPRESS_AWS_IDENTITY_POOL_ID: ${{ env.CYPRESS_AWS_IDENTITY_POOL_ID }}
+          CYPRESS_AWS_AUTH_REGION: ${{ env.CYPRESS_AWS_AUTH_REGION }}
+          CYPRESS_AWS_USER_POOL_ID: ${{ env.CYPRESS_AWS_USER_POOL_ID }}
+          CYPRESS_AWS_USER_POOL_WEB_CLIENT_ID: ${{ env.CYPRESS_AWS_USER_POOL_WEB_CLIENT_ID }}
+          CYPRESS_AWS_MANDATORY_SIGN_IN: ${{ env.CYPRESS_AWS_MANDATORY_SIGN_IN }}
+          CYPRESS_AWS_AUTHENTICATION_FLOW_TYPE: ${{ env.CYPRESS_AWS_AUTHENTICATION_FLOW_TYPE }}
+          CYPRESS_AWS_STORAGE_BUCKET: ${{ env.CYPRESS_AWS_STORAGE_BUCKET }}
+          CYPRESS_AWS_STORAGE_REGION: ${{ env.CYPRESS_AWS_STORAGE_REGION }}
+          CYPRESS_COGNITO_USER_NAME: ${{ env.CYPRESS_COGNITO_USER_NAME }}
+          CYPRESS_COGNITO_USER_PASS: ${{ env.CYPRESS_COGNITO_USER_PASS }}
+          CYPRESS_COGNITO_USER_PASS_LENGTH: ${{ env.CYPRESS_COGNITO_USER_PASS_LENGTH }}
+          CYPRESS_COGNITO_USER_PASS_REQUIRE_LOWERCASE: ${{ env.CYPRESS_COGNITO_USER_PASS_REQUIRE_LOWERCASE }}
+          CYPRESS_COGNITO_USER_PASS_REQUIRE_UPPERCASE: ${{ env.CYPRESS_COGNITO_USER_PASS_REQUIRE_UPPERCASE }}
+          CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER: ${{ env.CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER }}
+          CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL: ${{ env.CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL }}
         with:
           start: npm run start
           wait-on: http://localhost:6001
