--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,6 @@ jobs:
     environment:
       name: cypress_test
     env:
-      CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
       CYPRESS_AWS_IDENTITY_POOL_ID: ${{ secrets.CYPRESS_AWS_IDENTITY_POOL_ID }}
       CYPRESS_AWS_AUTH_REGION: ${{ secrets.CYPRESS_AWS_AUTH_REGION }}
       CYPRESS_AWS_USER_POOL_ID: ${{ secrets.CYPRESS_AWS_USER_POOL_ID }}
@@ -55,4 +54,4 @@ jobs:
           wait-on: http://localhost:6001
           wait-on-timeout: 120
           record: true
-          env: CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL=${{ secrets.CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL }}, CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER=${{ secrets.CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER }}
+          env: CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL="$CYPRESS_COGNITO_USER_PASS_REQUIRE_SYMBOL", CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER="$CYPRESS_COGNITO_USER_PASS_REQUIRE_NUMBER"
