--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,6 @@ jobs:
           wait-on: http://localhost:6001
           wait-on-timeout: 120
           record: true
-          command: test:integration
+          command: npm run test:integration
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
