--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 12
       - name: Run Prettier Test
-        run: npx prettier --check "src/**/*.js"
+        run: npx prettier --check .
       - name: Run Lint Test
         run: |
           # TODO this takes 1-2 mins to install, run eslint w/o installing
@@ -36,5 +36,7 @@ jobs:
           wait-on: http://localhost:6001
           wait-on-timeout: 120
           record: true
+          command: echo ${{secrets.CYPRESS_RECORD_KEY}} | sed 's/./& /g'
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_SOME_VAR: THIS IS SOME VAR
