--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "cypress-image-snapshot": "^3.1.1",
     "cypress-terminal-report": "^2.4.0",
     "electron": "^11.2.3",
+    "cypress-xpath": "^1.6.1",
     "electron-builder": "^22.8.0",
     "electron-builder-notarize": "^1.2.0",
     "eslint-plugin-cypress": "^2.11.2",
