--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "desktop/main.js",
   "homepage": "https://universaldatatool.com/app/",
   "proxy": "http://localhost:3000",
+  "default": "vanilla.js",
   "scripts": {
     "start": "cross-env PORT=6001 react-scripts start",
     "start:desktop": "cross-env BROWSER=none USE_DEV_SERVER=yes concurrently 'start' 'electron ./desktop'",
@@ -14,7 +15,7 @@
     "build:all": "npm run build:babel && npm run build:vanilla && npm run build:desktop",
     "build:lib": "npm run build:babel && npm run build:vanilla",
     "build:babel": "cross-env NODE_ENV=production babel ./src --out-dir=./lib --copy-files && cp ./package.json ./lib/package.json && cp ./README.md ./lib/README.md && node ./lib/lib/fix-deps.js",
-    "build:vanilla": "parcel build -d ./lib -o vanilla.js ./src/vanilla/index.js",
+    "build:vanilla": "parcel build ./src/vanilla/index.js --dist-dir ./lib",
     "build:vanilla:dev": "parcel ./src/vanilla/index.js",
     "build:web": "rimraf build && react-scripts build && cp -r build ./build-copy && mv build-copy build/app",
     "build:desktop": "cross-env REACT_APP_DESKTOP=true PUBLIC_URL=./ react-scripts build && electron-builder build && cp ./desktop/entitlements.mac.plist ./build/entitlements.mac.plist",
@@ -71,7 +72,6 @@
     "electron-builder-notarize": "^1.2.0",
     "eslint-plugin-cypress": "^2.11.2",
     "gh-pages": "^2.1.1",
-    "parcel": "^1.12.4",
     "prettier": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -106,6 +106,7 @@
     "mime-types": "^2.1.28",
     "moment": "^2.24.0",
     "nan": "^2.14.1",
+    "parcel": "^2.0.0-beta.2",
     "qs": "^6.9.4",
     "react-ace": "^7.0.4",
     "react-data-table-component": "^6.2.2",
